--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -21,6 +21,9 @@
     "babel-loader": "^8.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "scss-loader": "0.0.1",
+    "style-loader": "^0.23.0",
     "webpack-cli": "^3.1.0"
   }
 }
