--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
     "react": "^16.4.2",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.2",
     "redis": "^2.8.0"
   },
