--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chart.js": "^2.7.2",
+    "datejs": "^1.0.0-rc3",
     "express": "^4.16.3",
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
